[gd_scene load_steps=2 format=3 uid="uid://0w5b5lk4mahu"]

[ext_resource type="Script" uid="uid://b1mldmuacuhcx" path="res://Scenes/Player/UI/ToolHotbar.gd" id="1_jx7ad"]

[node name="Hotbar" type="PanelContainer"]
custom_minimum_size = Vector2(300, 110)
offset_right = 340.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jx7ad")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel2" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel3" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel4" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
